# liq-sim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md
src/liq/sim/: __init__.py  accounting.py  brackets.py  calibration.py  checkpoint.py  cli.py  config.py  constraints.py  exceptions.py  execution.py  financing.py  funding_model.py  fx.py  protocols.py  providers.py  risk_caps.py  simulator.py  validation.py
src/liq/sim/models/: fee.py  slippage.py  spread.py
tests/: __init__.py  conftest.py  test_accounting.py  test_accounting_edge_cases.py  test_brackets.py  test_brackets_edge_cases.py  test_buying_power.py  test_calibration.py  test_checkpointing.py  test_cli.py  test_config.py  test_constraints.py  test_daily_loss_halt.py  test_day_order_expiry.py  test_equity_floor.py  test_execution.py  test_execution_edge_cases.py  test_fee_affordability.py  test_fee_models.py  test_financing.py  test_funding_model.py  test_fx.py  test_golden_regression.py  test_gross_leverage.py  test_kill_switch.py  test_pdt.py  test_protocols.py  test_providers.py  test_providers_v2.py  test_risk_caps.py  test_simulator.py  test_simulator_additions.py  test_simulator_constraints.py  test_simulator_gross_leverage.py  test_simulator_kill_switch.py  test_slippage_models.py  test_swaps.py  test_validation.py
