[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-sim"
version = "0.1.0"
description = "LIQ Stack: execution simulation layer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Latent Infinity Solutions" }]
dependencies = [
    "liq-core>=0.1.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "ruff>=0.14",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=liq.sim --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
